src/objects/ProductionSystem__c.object
<CustomObject>
    <description>Owner - Nicholas Frank - Production system at an account such as a: Suite, Policy Admin System, Billing System, Claims System, Rating System, etc.

Do NOT DELETE</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>The account record the systems relate to.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Systems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Analytics__c</fullName>
        <label>Analytics</label>
        <picklist>
            <picklistValues>
                <fullName>Towers Watson – Emblem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valen Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earnix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R (open source)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire – PA for Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire – PA for Profitability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire – via EE acquisition</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Acquired__c</fullName>
        <description>When did this account acquire the system?</description>
        <label>Billing Acquired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_System__c</fullName>
        <label>Billing System</label>
        <picklist>
            <picklistValues>
                <fullName>AGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover-All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC-CoGen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Exceed Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC POINT Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC SeriesII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curam/IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delphi Oasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duck Creek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchanging Genius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exigen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finys/Innovative Computer/ICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FiServ Advanced Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freedom Group/Fiserv - Combined Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDMI-PTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instec (policy only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insuresoft Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internally Developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internally Developed - Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internally Developed - Modern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawson</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClaimCenter_Potential__c</fullName>
        <label>ClaimCenter Potential</label>
        <picklist>
            <picklistValues>
                <fullName>High - Legacy Systems, Consolidations</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low - Current Modern Arch, New System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claims_Acquired__c</fullName>
        <label>Claims Acquired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claims_System__c</fullName>
        <label>Claims System</label>
        <picklist>
            <picklistValues>
                <fullName>3i Infotech/Premia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allenbrook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC ClaimsPro/Advanced Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Cogen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Exceed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Insure/90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Point/Point IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Polisy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Polisy/400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC RiskMaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Series II, III, S3+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS Stars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curam/IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delphi Oasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBao Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epic - ConceptOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exigen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fineos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finys/Innovative Computer/ICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiserv Claims Workstation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiserv PDS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_and_Notes__c</fullName>
        <description>Where did the info source from. Any detailed comments about the system or how we found out about the system.</description>
        <label>Info Source, Comments and Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Solutions__c</fullName>
        <label>Data Solutions</label>
        <picklist>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Data Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Data Hub and Info Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Info Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPartners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Majesco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House / Custom Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teradata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Builders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle Eye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yodel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doc_Management__c</fullName>
        <label>Doc Management</label>
        <picklist>
            <picklistValues>
                <fullName>HP Extreme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle products (Documaker, Documerge, Calligo),</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC (Document Sciences)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adobe (JetForms, LifeCycle)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thunderhead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homegrown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Product_Types__c</fullName>
        <label>General Insurance Products</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Comp</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LOB_Details__c</fullName>
        <description>Details about the LOBs run in the system.</description>
        <label>LOB Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PolicyCenter_Potential__c</fullName>
        <label>PolicyCenter Potential</label>
        <picklist>
            <picklistValues>
                <fullName>High - Legacy Systems, Consolidations</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low - Current Modern Arch, New System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Acquired__c</fullName>
        <label>Policy Acquired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_System__c</fullName>
        <description>The Policy System</description>
        <label>Policy System</label>
        <picklist>
            <picklistValues>
                <fullName>3i Infotech/Premia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptik PolicyWriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allenbrook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AscendantOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camilion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover-all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Cogen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Exceed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Insure/90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC PMSC Series II, III, S3+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Polisy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC Polisy/400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curam/IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delphi Oasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duck Creek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duck Creek - Rating Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBao Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBIX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epic - ConceptOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epolicy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exigen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finys/Innovative Computer/ICS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Portals__c</fullName>
        <label>Portals</label>
        <picklist>
            <picklistValues>
                <fullName>Custom Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liferay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backbase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharepoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Port</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>CGI Ratabase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duck Creek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeGrown Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Insbridge</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Production System</label>
    <nameField>
        <label>System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Production Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>